# AUSPEX-KNOW

./: .gitignore  .gitmodules  README.md
src/auspex_knowledge/: package.xml  setup.cfg  setup.py
src/auspex_knowledge/auspex_knowledge/: drone_state_mock_publisher.py  knowledge_collector.py  knowledge_main.py  search_mission_mock_publisher.py  ul_state_mock_publisher.py  valkey_client.py  world_knowledge_base.py  world_knowledge_server.py
src/auspex_knowledge/auspex_knowledge/external_knowledge/: copernicus_server.py
