<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auspex_knowledge</name>
  <version>1.0.0</version>
  <description>AUSPEX World Knowledge Base</description>
  <maintainer email="kai.sommer@unibw.de">Kai Sommer</maintainer>
  <license>MIT</license>

  <exec_depend>auspex_msgs</exec_depend>
  <exec_depend>msg_context</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
